--- a/content.html
+++ b/content.html
@@ -1,11 +1,9 @@
 <r-cell>
-# R vector and factor examples
+print("Hello, world!")
 numbers <- c(1, 2, 3, 4, NA)
 mean_val <- mean(numbers, na.rm = TRUE)
-pet_types <- factor(c("cat", "dog", "dog", "cat", "parrot"))
 </r-cell>
 
 <r-cell>
 print(mean_val)
-print(summary(pet_types))
 </r-cell>
