Added cmd+enter shortcut

--- a/content.html
+++ b/content.html
@@ -4,6 +4,6 @@
 print("Hello, Atomic Learning!")
 </r-cell>
 
-<p>These code cells are designed to act as examples that you can interact with directly within the learning platform. You can run them by clicking the "run" below the code cell. Try this with the example above now (don't worry if you don't understand what the code means for now). You should see the output of the code appear just below the cell. You can also run the code by pressing <kbd>shift</kbd>+<kbd>Enter</kbd> or <kbd>Ctrl</kbd>+<kbd>Enter</kbd>.</p>
+<p>These code cells are designed to act as examples that you can interact with directly within the learning platform. You can run them by clicking the "run" below the code cell. Try this with the example above now (don't worry if you don't understand what the code means for now). You should see the output of the code appear just below the cell. You can also run the code by pressing <kbd>shift</kbd>+<kbd>Enter</kbd>, <kbd>Ctrl</kbd>+<kbd>Enter</kbd> (on Windows/Linux), or <kbd>Cmd</kbd>+<kbd>Enter</kbd> (on Mac).</p>
     
 <p>You can also edit the code within a code cell to experiment with variations of the example code. Try changing "Atomic Learning" in the code cell above to your name and then re-running the cell. If you want to return the code cell to its original state, simply refresh the page.</p>
